Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -20,20 +20,26 @@
 
     <div class="awesome">
         <div class="left">
-            <h1>This website is awesome</h1>
+            <h1 class="title">This website is awesome</h1>
             <p>This website has some subtext that goes under the
                 main title. It's a smaller font and the color is lower contrast
             </p>
             <button>Sign Up</button>
         </div>
         <div class="right">
-            placeholder for image
+            <img src="images/awesome.jpg">
         </div>
     </div>
-    
+
     <div class="info">
-        <h1 class="info">Some random information.</h1>
-        <div class="images"></div>
+        <h1 class="info_text">Some of my passions</h1>
+    </div>
+
+    <div class="images">
+        <img src="images/coding.jpg" class="round_border" alt="coding">
+        <img src="images/cooking.jpg" class="round_border" alt="cooking">
+        <img src="images/gaming.jpg" class="round_border" alt="gaming">
+        <img src="images/travel.jpg" class="round_border" alt="travel">
     </div>
 
     <div class="quote">
@@ -44,10 +50,11 @@
     </div>
 
     <div class="cta">
-        <div class="blue_box">
-            <h3>Call to action! It's time!</h3>
+        <div>
+            <h2>Let's build your landing page!</h2>
+            <h5>Click on the button on the right to contact me for your very own landing page!</h5>
         </div>
-        <button>Sign Up</button>
+        <button class="alt">Sign Up</button>
     </div>
 
     <div class="footer">Copyright The Odin Project 2021</div>
