--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
         <button class="alt">Sign Up</button>
     </div>
-
-    <div class="footer">Copyright The Odin Project 2021</div>
+    
+    <footer><div class="footer">Copyright The Odin Project 2021</div></footer>
+    
 </body>
 </html>
