--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Goomiac Web Design</div>
         <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">portfolio</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
         
     </div>
 
     <div class="awesome">
         <div class="left">
-            <h1 class="title">This website is awesome</h1>
+            <h1 class="title">This landing page is awesome</h1>
             <p>This website has some subtext that goes under the
                 main title. It's a smaller font and the color is lower contrast
             </p>
@@ -36,17 +36,28 @@
     </div>
 
     <div class="images">
-        <img src="images/coding.jpg" class="round_border" alt="coding">
-        <img src="images/cooking.jpg" class="round_border" alt="cooking">
-        <img src="images/gaming.jpg" class="round_border" alt="gaming">
-        <img src="images/travel.jpg" class="round_border" alt="travel">
+        <div>
+            <img src="images/coding.jpg" class="round_border" alt="coding">
+            <p>Coding</p>
+        </div>
+        <div>
+            <img src="images/cooking.jpg" class="round_border" alt="cooking">
+            <p>Cooking and food</p>
+        </div>
+        <div>
+            <img src="images/gaming.jpg" class="round_border" alt="gaming">
+            <p>Gaming</p>
+        </div>
+        <div>
+            <img src="images/travel.jpg" class="round_border" alt="travel">
+            <p>Travel</p>
+        </div>
+        
     </div>
 
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer.
-            Maybe it's just filling up space, of maybe people will actually
-            read it. Who knows? All I know is that it looks nice.
-        </p>
+        <p>I don't think I ever seen a more beautiful landing page!</p>
+        <p class="right">- no one, ever</p>
     </div>
 
     <div class="cta">
@@ -54,7 +65,7 @@
             <h2>Let's build your landing page!</h2>
             <h5>Click on the button on the right to contact me for your very own landing page!</h5>
         </div>
-        <button class="alt">Sign Up</button>
+        <button class="alt">Hire me!</button>
     </div>
 
     <footer><div class="footer">Copyright The Odin Project 2021</div></footer>
